Fix! Document description - Remove css making RC bug on FireFox - Remove custom propriety auditActions on object document to make update work again

--- a/app/styles/pages/common/common-sidebar-right.scss
+++ b/app/styles/pages/common/common-sidebar-right.scss
@@ -383,7 +383,6 @@ md-content #content-ctn-sidebar {
     line-height: 18px;
     height: inherit;
     text-overflow: inherit;
-    white-space: normal;
     width: 90%;
     padding-right: 0.85em;
     div {
